SERVER-55647 shard-local db and collection caches may not contain timestamps after upgrade in the presence of configsvr stepdowns